--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,29 @@
 .col-lg-2,
 .col-lg-10 {
   padding: 2rem 0 !important;
+  position: relative;
+}
+.SearchBox{
+  position: absolute;
+    width: 90%;
+    height: fit-content;
+    background: #fff;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    box-shadow: -25px 40px 25px -16px rgb(0 0 0 / 26%);
+    -webkit-box-shadow: -25px 40px 25px -16px rgb(0 0 0 / 26%);
+    -moz-box-shadow: -25px 40px 25px -16px rgb(0 0 0 / 26%);
+}
+.SearchInput{
+  border-radius: 10px;
+    padding: 10px;
+    border: 0.5px solid #000;
 }
 .profile{
-  margin:1.5rem 0;
+  margin:0.5rem 0;
+}
+.header .profile{
+  padding: 0 0 1rem 0;
 }
 .profileImg {
   width: 50px;
@@ -37,7 +57,6 @@
   background-color: #82c7ff;
 }
 .reciever {
-  float: right;
   background-color: #9fafbd;
 }
 .sender,
@@ -48,7 +67,8 @@
   position: relative;
   min-height: 60px;
   min-width: 40%;
-  width: fit-content;
+  max-width: 60% !important;
+  width: fit-content !important;
 }
 .sender p,
 .reciever p {
@@ -70,4 +90,13 @@
   -webkit-box-shadow: 3px 2px 10px 2px rgb(0 0 0 / 31%);
 -moz-box-shadow: 3px 2px 10px 2px rgb(0 0 0 / 31%);
 border: none;
+padding:1rem 4rem 1rem 1rem;
+}
+.sendButton{
+  position: absolute;
+    right: 0;
+    background: none;
+    border: none;
+    height: 90%;
+    padding: 0 1rem;
 }
