--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,42 @@
 .col-lg-2 {
-  box-shadow: 37px 2px 34px -35px rgba(0,0,0,0.26);
--webkit-box-shadow: 37px 2px 34px -35px rgba(0,0,0,0.26);
--moz-box-shadow: 37px 2px 34px -35px rgba(0,0,0,0.26);
+  box-shadow: 37px 2px 34px -35px rgba(0, 0, 0, 0.26);
+  -webkit-box-shadow: 37px 2px 34px -35px rgba(0, 0, 0, 0.26);
+  -moz-box-shadow: 37px 2px 34px -35px rgba(0, 0, 0, 0.26);
   min-height: 100vh;
 }
+
 .col-lg-2,
 .col-lg-10 {
   padding: 2rem 0 !important;
   position: relative;
 }
-.SearchBox{
+
+.SearchBox {
   position: absolute;
-    width: 90%;
-    height: fit-content;
-    background: #fff;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    box-shadow: -25px 40px 25px -16px rgb(0 0 0 / 26%);
-    -webkit-box-shadow: -25px 40px 25px -16px rgb(0 0 0 / 26%);
-    -moz-box-shadow: -25px 40px 25px -16px rgb(0 0 0 / 26%);
+  width: 90%;
+  height: fit-content;
+  background: #fff;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: -25px 40px 25px -16px rgb(0 0 0 / 26%);
+  -webkit-box-shadow: -25px 40px 25px -16px rgb(0 0 0 / 26%);
+  -moz-box-shadow: -25px 40px 25px -16px rgb(0 0 0 / 26%);
 }
-.SearchInput{
+
+.SearchInput {
   border-radius: 10px;
-    padding: 10px;
-    border: 0.5px solid #000;
+  padding: 10px;
+  border: 0.5px solid #000;
 }
-.profile{
-  margin:0.5rem 0;
+
+.profile {
+  margin: 0.5rem 0;
 }
-.header .profile{
+
+.header .profile {
   padding: 0 0 1rem 0;
 }
+
 .profileImg {
   width: 50px;
   height: 50px;
@@ -39,26 +45,32 @@
   background-color: #82c7ff;
   margin-right: 20px;
 }
+
 .profile p {
   margin: 0;
   font-weight: 600;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: sans-serif;
 }
+
 .header {
-  box-shadow: -1px 40px 34px -18px rgba(0,0,0,0.31);
--webkit-box-shadow: -1px 40px 34px -18px rgba(0,0,0,0.31);
--moz-box-shadow: -1px 40px 34px -18px rgba(0,0,0,0.31);
+  box-shadow: -1px 40px 34px -18px rgba(0, 0, 0, 0.31);
+  -webkit-box-shadow: -1px 40px 34px -18px rgba(0, 0, 0, 0.31);
+  -moz-box-shadow: -1px 40px 34px -18px rgba(0, 0, 0, 0.31);
   padding: 0 2rem;
 }
+
 .body {
   padding: 2rem;
 }
+
 .sender {
   background-color: #82c7ff;
 }
+
 .reciever {
   background-color: #9fafbd;
 }
+
 .sender,
 .reciever {
   padding: 10px;
@@ -70,43 +82,65 @@
   max-width: 60% !important;
   width: fit-content !important;
 }
+
 .sender p,
 .reciever p {
   margin: 0;
 }
+
+.fa-chevron-down {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 10px;
+}
+
 .time {
   float: right;
 }
-.footer{
+
+.time p {
+  font-size: 10px;
+  bottom: 5px;
   position: absolute;
-    bottom: 0;
-    width: 100%;
-    resize: none;
+  right: 10px;
 }
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  resize: none;
+}
+
 .footer textarea {
   width: 100%;
   resize: none !important;
   box-shadow: 3px 2px 10px 2px rgb(0 0 0 / 31%);
   -webkit-box-shadow: 3px 2px 10px 2px rgb(0 0 0 / 31%);
--moz-box-shadow: 3px 2px 10px 2px rgb(0 0 0 / 31%);
-border: none;
-padding:1rem 4rem 1rem 1rem;
+  -moz-box-shadow: 3px 2px 10px 2px rgb(0 0 0 / 31%);
+  border: none;
+  padding: 1rem 4rem 1rem 1rem;
 }
-.sendButton{
+
+.sendButton {
   position: absolute;
-    right: 0;
-    background: none;
-    border: none;
-    height: 90%;
-    padding: 0 1rem;
+  right: 0;
+  background: none;
+  border: none;
+  height: 90%;
+  padding: 0 1rem;
 }
-.widthFit{
+
+.widthFit {
   width: fit-content !important;
 }
-.widthFit .profileImg{
+
+.widthFit .profileImg {
   margin-right: 0;
 }
-.loading {    
+
+.loading {
   background-image: url("./assets/loader.gif");
   width: 30px;
   height: 30px;
@@ -115,7 +149,31 @@ padding:1rem 4rem 1rem 1rem;
   top: 5px;
   right: 40px;
 }
+
 .css-1s2u09g-control {
   border-color: hsl(0deg 0% 80% / 56%) !important;
   border-radius: 35px !important;
+}
+
+button.profile {
+  border: none;
+}
+
+.col-lg-2 .profile,
+button.profile {
+  background: none;
+
+}
+
+.col-lg-2 .profile p {
+  font-size: 10px;
+}
+.text-left{
+  text-align: left;
+  color: #777777;
+}
+.userTime{
+    font-size: 8px !important;
+    position: absolute;
+    right: 15px;
 }
